# pyBurner

./: LICENSE  README  README.md  requirements-dev.txt  setup.cfg
.github/workflows/: lint_and_test.yml
examples/: basic_example.py  threading_example.py
pyburner/: __init__.py  client.py  websocket.py
tests/: client_test.py  pytest.ini
tests/utils/: ws_server.py
