[metadata]
name = pyBurner
version = 1.0.0
description = A Python library for interacting with the Afterburner diesel heater controller
keywords = afterburner, diesel heater, controller
license = MIT
author = Thomas Tuffin
url = https://github.com/ttuffin/pyBurner
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = pyburner
install_requires =
    websockets
zip_safe = False